syntax = "proto3";

package sequencer.v1;

option go_package = "github.com/Lagrange-Labs/lsc-node/sequencer/types";

// ChainHeader is the block header for the given block of the specific chain
message ChainHeader {
    uint64 block_number = 1;
    string block_hash = 2;
    uint32 chain_id = 3;
    uint64 l1_block_number = 4;
    string l1_tx_hash = 5;
}

// BlockHeader is the block header structure
message BlockHeader {
    string current_committee = 1;
    string next_committee = 2;
    uint64 total_voting_power = 3;
    string proposer_pub_key = 4;
    string proposer_signature = 5;
}

// Block is the block body structure
message Block {
    BlockHeader block_header = 1;
    ChainHeader chain_header = 2;
    repeated string pub_keys = 3;
    string agg_signature = 4;
    string sequenced_time = 5;
    string finalized_time = 6;
}

// BlsSignature is the BLS signature of the given round
message BlsSignature {
    ChainHeader chain_header = 1;
    string current_committee = 2;
    string next_committee = 3;
    string bls_signature = 4;
    string ecdsa_signature = 5;
}